--- a/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
+++ b/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
@@ -1,3 +1,96 @@
-<p>
-  resources-landing works!
-</p>
+<div class="main-content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <h3 class="title">
+          Recursos disponibles
+        </h3>
+      </div>
+    </div>
+    <div class="row">
+
+      <!-- EDIFICIOS -->
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats">
+          <div class="card-header card-header-warning card-header-icon">
+            <div class="card-icon">
+              <i class="material-icons">account_balance</i>
+            </div>
+            <p class="card-category">Edificios/Salas</p>
+            <h6 class="card-title">
+              Edificios: 5
+              <br>
+              Salas: 100
+            </h6>
+          </div>
+          <div class="card-footer">
+            <div class="stats">
+              <i class="material-icons text-success">account_balance</i>
+              <a routerLink="/resources/buildings">Ver edificios y salas</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- CARRERAS -->
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats">
+          <div class="card-header card-header-success card-header-icon">
+            <div class="card-icon">
+              <i class="material-icons">import_contacts</i>
+            </div>
+            <p class="card-category">Carreras</p>
+            <h3 class="card-title">12
+            </h3>
+          </div>
+          <div class="card-footer">
+            <div class="stats">
+              <i class="material-icons text-success">import_contacts</i>
+              <a href="#pablo">Ver carreras</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- RAMOS -->
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats">
+          <div class="card-header card-header-success card-header-icon">
+            <div class="card-icon">
+              <i class="material-icons">book</i>
+            </div>
+            <p class="card-category">Ramos</p>
+            <h3 class="card-title">224
+            </h3>
+          </div>
+          <div class="card-footer">
+            <div class="stats">
+              <i class="material-icons text-success">book</i>
+              <a href="#pablo">Ver ramos</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- PROFESORES -->
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats">
+          <div class="card-header card-header-info card-header-icon">
+            <div class="card-icon">
+              <i class="material-icons">perm_identity</i>
+            </div>
+            <p class="card-category">Profesores</p>
+            <h3 class="card-title">45
+            </h3>
+          </div>
+          <div class="card-footer">
+            <div class="stats">
+              <i class="material-icons text-success">person_outline</i>
+              <a href="#pablo">Ver profesores</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
