--- a/Client/src/app/components/navbar/navbar.component.scss
+++ b/Client/src/app/components/navbar/navbar.component.scss
@@ -18,7 +18,7 @@
     margin-right: 20px;
   }
   li::after {
-    content: '->';
+    content: '/';
     color: darkgrey;
   }
   li:last-child::after {
