--- a/Client/src/app/user-profile/user-profile.component.html
+++ b/Client/src/app/user-profile/user-profile.component.html
@@ -10,7 +10,7 @@
                   <div class="card-body">
                       <form>
                           <div class="row">
-                              <div class="col-md-5">
+                              <div class="col-md-12">
                                 <mat-form-field class="example-full-width">
                                     <input matInput placeholder="Company (disabled)" disabled>
                                   </mat-form-field>
@@ -83,7 +83,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-md-4">
+          <!--<div class="col-md-4">
               <div class="card card-profile">
                   <div class="card-avatar">
                       <a href="#pablo">
@@ -99,7 +99,7 @@
                       <a href="#pablo" class="btn btn-danger btn-round">Follow</a>
                   </div>
               </div>
-          </div>
+          </div>-->
       </div>
   </div>
 </div>
