--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+a {
+  color: black;
+}
+
+a:hover {
+  color:  #0000EE;
+}
+
+.main-content {
+  margin-top: 40px !important;
+  padding-top: 10px !important;
+  padding-bottom: 15px !important;
+}
