--- a/Client/src/app/modules/resources/buildings/add-classroom/add-classroom.component.html
+++ b/Client/src/app/modules/resources/buildings/add-classroom/add-classroom.component.html
@@ -1,7 +1,10 @@
-<h3 mat-dialog-title>Crear edificio</h3>
+<h3 mat-dialog-title>Crear sala</h3>
 <div mat-dialog-content>
   <mat-form-field>
     <input matInput [(ngModel)]="data.name" placeholder="Nombre">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput [(ngModel)]="data.capacity" placeholder="Capacidad">
   </mat-form-field>
 </div>
 <div mat-dialog-actions class="pull-right">
