--- a/Client/src/app/modules/resources/buildings/buildings-list/buildings-list.component.html
+++ b/Client/src/app/modules/resources/buildings/buildings-list/buildings-list.component.html
@@ -18,18 +18,26 @@
     <div class="row">
       <div class="card">
         <mat-accordion>
-          <mat-expansion-panel>
+          <mat-expansion-panel *ngFor="let building of buildings; let i = index">
             <mat-expansion-panel-header>
               <mat-panel-title>
-                Servicios múltiples
+                {{building.name}}
               </mat-panel-title>
               <mat-panel-description>
-                Salas: 9
+                Salas: {{building.classrooms.length}}
               </mat-panel-description>
             </mat-expansion-panel-header>
 
-            <mat-table [dataSource]="dataSource" class="mat-elevation-z1">
-
+            <div class="row" style="padding-bottom: 10px">
+              <div class="col-2 offset-10">
+                <button mat-raised-button (click)="addClassroom(building.id)" class="btn-success pull-right">
+                  <mat-icon>add</mat-icon>
+                  Agregar
+                </button>
+              </div>
+            </div>
+            <mat-table [dataSource]="building.classrooms" class="mat-elevation-z1" *ngIf="building.classrooms.length > 0; else noClassrooms">
+              <p>Lista de salas</p>
               <!-- Name Column -->
               <ng-container matColumnDef="name">
                 <mat-header-cell *matHeaderCellDef> Nombre </mat-header-cell>
@@ -65,55 +73,17 @@
 
           </mat-expansion-panel>
 
-          <mat-expansion-panel >
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                Edificio Ing. Obras Civiles
-              </mat-panel-title>
-              <mat-panel-description>
-                Salas: 5
-              </mat-panel-description>
-            </mat-expansion-panel-header>
 
-            <mat-table [dataSource]="dataSource" class="mat-elevation-z1">
-
-              <!-- Name Column -->
-              <ng-container matColumnDef="name">
-                <mat-header-cell *matHeaderCellDef> Nombre </mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-              </ng-container>
-
-              <!-- Capacity Column -->
-              <ng-container matColumnDef="capacity">
-                <mat-header-cell *matHeaderCellDef> Capacidad </mat-header-cell>
-                <mat-cell *matCellDef="let element"> {{element.capacity}} </mat-cell>
-              </ng-container>
-
-              <!-- Options Column -->
-              <ng-container matColumnDef="options" >
-                <mat-header-cell *matHeaderCellDef> Opciones </mat-header-cell>
-                <mat-cell *matCellDef="let element">
-                  <button mat-raised-button class="btn-primary" style="margin-right: 5px">
-                    <mat-icon>create</mat-icon>
-                    Editar
-                  </button>
-                  <button mat-raised-button class="btn-danger">
-                    <mat-icon>delete</mat-icon>
-                    Eliminar
-                  </button>
-
-                </mat-cell>
-              </ng-container>
-
-              <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-              <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-            </mat-table>
-
-          </mat-expansion-panel>
         </mat-accordion>
 
       </div>
     </div>
   </div>
+
+  <ng-template #noClassrooms>
+    <p>
+      No hay salas de classes agregadas
+    </p>
+  </ng-template>
 </div>
 
