update view to tables

--- a/Client/src/app/modules/resources/buildings/add-building/add-building.component.html
+++ b/Client/src/app/modules/resources/buildings/add-building/add-building.component.html
@@ -5,6 +5,6 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions class="pull-right">
-  <button mat-raised-button (click)="close()" class="btn-danger" style="margin-right: 5px">Cancelar</button>
-  <button mat-raised-button [mat-dialog-close]="data" class="btn-success" >Guardar</button>
+  <button mat-raised-button (click)="close()" style="margin-right: 5px">Cancelar</button>
+  <button mat-raised-button  [mat-dialog-close]="data" class="btn-success" >Guardar</button>
 </div>
