--- a/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
+++ b/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
@@ -18,9 +18,9 @@
             </div>
             <p class="card-category">Edificios/Salas</p>
             <h6 class="card-title">
-              Edificios: 5
+              Edificios: {{buildingsCount | async}}
               <br>
-              Salas: 100
+              Salas: {{classroomsCount | async}}
             </h6>
           </div>
           <div class="card-footer">
