--- a/Client/src/app/modules/resources/buildings/add-classroom/add-classroom.component.html
+++ b/Client/src/app/modules/resources/buildings/add-classroom/add-classroom.component.html
@@ -1,13 +1,16 @@
-<h3 mat-dialog-title>Crear sala</h3>
+<h3 mat-dialog-title>{{data.action}} sala</h3>
 <div mat-dialog-content>
-  <mat-form-field>
-    <input matInput [(ngModel)]="data.name" placeholder="Nombre">
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput [(ngModel)]="data.capacity" placeholder="Capacidad">
-  </mat-form-field>
+  <div class="row">
+    <mat-form-field class="col-lg-8 col-md-8 col-sm-12 col-xl-8">
+      <input matInput [(ngModel)]="data.element.name" placeholder="Nombre">
+    </mat-form-field>
+    <mat-form-field class="col-lg-4 col-md-4 col-sm-12 col-xl-4">
+      <input matInput type="number" [(ngModel)]="data.element.capacity" placeholder="Capacidad">
+    </mat-form-field>
+  </div>
+
 </div>
 <div mat-dialog-actions class="pull-right">
   <button mat-raised-button (click)="close()" style="margin-right: 5px">Cancelar</button>
-  <button mat-raised-button [mat-dialog-close]="data" class="btn-success" >Guardar</button>
+  <button mat-raised-button [mat-dialog-close]="data.element" class="btn-success" >Guardar</button>
 </div>
