--- a/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
+++ b/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
@@ -40,13 +40,13 @@
               <i class="material-icons">import_contacts</i>
             </div>
             <p class="card-category">Carreras</p>
-            <h3 class="card-title">12
+            <h3 class="card-title">{{careersCount | async}}
             </h3>
           </div>
           <div class="card-footer">
             <div class="stats">
               <i class="material-icons text-success">import_contacts</i>
-              <a href="#pablo">Ver carreras</a>
+              <a routerLink="/resources/careers">Ver carreras</a>
             </div>
           </div>
         </div>
