--- a/Client/src/app/components/footer/footer.component.html
+++ b/Client/src/app/components/footer/footer.component.html
@@ -4,15 +4,9 @@
             <ul>
                 
                 <li>
-                    <a href="https://creative-tim.com/about-us">
-                        About Us
-                    </a>
+                    Scheduler, Universidad de Talca. Proyecto de Memoria
                 </li>
-                <li>
-                    <a href="https://www.creative-tim.com/license">
-                        Licenses
-                    </a>
-                </li>
+                
             </ul>
         </nav>
         <!--<div class="copyright pull-right">
