--- a/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
+++ b/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
@@ -66,7 +66,7 @@
           <div class="card-footer">
             <div class="stats">
               <i class="material-icons text-success">book</i>
-              <a href="#pablo">Ver ramos</a>
+              <a routerLink="/resources/subjects">Ver ramos</a>
             </div>
           </div>
         </div>
