--- a/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.scss
+++ b/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.scss
@@ -11,13 +11,13 @@ mat-table {
   justify-content: center;
 }
 
-.container-fluid {
+/*.container-fluid {
   display: flex;
   flex-direction: column;
-}
+}*/
 
 .data-options {
-  display: flex;
-  flex-direction: row;
+  //display: flex;
+  //flex-direction: row;
   justify-content: space-between;
 }
