--- a/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
+++ b/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
@@ -60,8 +60,11 @@
               <i class="material-icons">book</i>
             </div>
             <p class="card-category">Ramos</p>
-            <h3 class="card-title">224
-            </h3>
+            <h6 class="card-title">
+              Ramos: {{subjectsCount | async}}
+              <br>
+              Secciones: {{sectionsCount | async}}
+            </h6>
           </div>
           <div class="card-footer">
             <div class="stats">
