Add Teachers registration

--- a/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
+++ b/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
@@ -89,7 +89,7 @@
           <div class="card-footer">
             <div class="stats">
               <i class="material-icons text-success">person_outline</i>
-              <a href="#pablo">Ver profesores</a>
+              <a routerLink="/resources/teachers">Ver profesores</a>
             </div>
           </div>
         </div>
