--- a/Client/src/app/modules/resources/subjects/add-subject/add-subject.component.html
+++ b/Client/src/app/modules/resources/subjects/add-subject/add-subject.component.html
@@ -15,9 +15,7 @@
       <div fxLayout="row" fxLayoutAlign="space-between">
         <h4 mat-dialog-title>Secciones</h4>
         <button mat-raised-button class="btn-success" (click)="addSection()" style="max-height: 32px">
-          <mat-icon style="height:48px !important;
-          width:48px !important;
-          font-size:48px !important;">add</mat-icon>
+          <mat-icon >add</mat-icon>
         </button>
       </div>
 
