--- a/Client/src/app/modules/resources/teachers/teachers-list/teachers-list.component.html
+++ b/Client/src/app/modules/resources/teachers/teachers-list/teachers-list.component.html
@@ -6,44 +6,23 @@
         Profesores
       </h3>
     </div>
-    <!--
-    <div fxLayout="row" class="data-options">
-      <div fxLayout="column">
-        <mat-form-field>
-          <mat-label>Carrera</mat-label>
-          <mat-select [(value)]="idCareer">
-            <mat-option (click)="careerChange()" *ngFor="let career of careers" [value]="career.id">
-              {{career.name}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div fxLayout="column">
-        <button (click)="addSubject()" [disabled]="!idCareer" mat-raised-button class="btn-success pull-right">
-          <mat-icon>add</mat-icon>
-          Agregar
-        </button>
-      </div>
+    <div fxLayout="row" fxLayoutAlign="end center" class="data-options">
+      <button (click)="addTeacher()" mat-raised-button class="btn-success">
+        <mat-icon>add</mat-icon>
+        Agregar
+      </button>
     </div>
-    <div fxFlexFill >
-      <mat-table [dataSource]="dataSource" matSort  class="mat-elevation-z1" [class.hidden]="!subjects">
+    <div fxFlexFill fxLayout="column">
+      <mat-table [dataSource]="dataSource" matSort class="mat-elevation-z1" [class.hidden]="!subjects">
 
         <ng-container matColumnDef="name">
           <mat-header-cell class="name-cell" *matHeaderCellDef> Nombre </mat-header-cell>
           <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
         </ng-container>
 
-        <ng-container matColumnDef="students">
-          <mat-header-cell mat-sort-header class="name-cell" *matHeaderCellDef> Alumnos estimados </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{element.students}} </mat-cell>
-        </ng-container>
-
         <ng-container matColumnDef="options">
           <mat-header-cell *matHeaderCellDef> Opciones </mat-header-cell>
           <mat-cell class="options-cell" *matCellDef="let element">
-            <button (click)="selectSchedule(element)" mat-raised-button class="btn-success" style="margin-right: 5px">
-              <mat-icon>view_list</mat-icon>
-            </button>
             <button mat-raised-button class="btn-primary" style="margin-right: 5px">
               <mat-icon>create</mat-icon>
             </button>
@@ -59,12 +38,12 @@
       </mat-table>
 
       <mat-paginator class="mat-elevation-z1" [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]"
-        *ngIf="subjects">
+        *ngIf="teachers">
       </mat-paginator>
 
     </div>
   </div>
--->
+
   <ng-template #noSubjects>
     <div>
       No hay profesores registrados
