fix subjects -> teachers

--- a/Client/src/app/modules/resources/teachers/teachers-list/teachers-list.component.html
+++ b/Client/src/app/modules/resources/teachers/teachers-list/teachers-list.component.html
@@ -13,7 +13,7 @@
       </button>
     </div>
     <div fxFlexFill fxLayout="column">
-      <mat-table [dataSource]="dataSource" matSort class="mat-elevation-z1" [class.hidden]="!subjects">
+      <mat-table [dataSource]="dataSource" matSort class="mat-elevation-z1" [class.hidden]="!teachers">
 
         <ng-container matColumnDef="name">
           <mat-header-cell class="name-cell" *matHeaderCellDef> Nombre </mat-header-cell>
