--- a/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.html
+++ b/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.html
@@ -51,7 +51,7 @@
               <mat-icon>create</mat-icon>
               <!--Editar-->
             </button>
-            <button mat-raised-button class="btn-danger">
+            <button (click)="deleteSection(element)" mat-raised-button class="btn-danger">
               <mat-icon>delete</mat-icon>
               <!--Eliminar-->
             </button>
