--- a/Client/src/app/components/delete-dialog/delete-dialog.component.html
+++ b/Client/src/app/components/delete-dialog/delete-dialog.component.html
@@ -1,6 +1,6 @@
 <h3 mat-dialog-title>Eliminar</h3>
 <div mat-dialog-content>
-  <h4 #cancel>¿Está seguro que desea eliminar {{data}}?</h4>
+  <h4 #cancel>¿Está seguro que desea eliminar: {{data}}?</h4>
 </div>
 <div mat-dialog-actions class="pull-right">
   <button mat-raised-button  (click)="close()" style="margin-right: 5px">Cancelar</button>
