improve section schedule view

--- a/Client/src/app/components/schedule/schedule.component.scss
+++ b/Client/src/app/components/schedule/schedule.component.scss
@@ -1,10 +1,30 @@
+
+/*td:hover {
+  background-color: #e8e8e8;
+}*/
+table {
+    background-color: white;
+}
+td > button {
+    width: 90%;
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+}
+
+th, td {
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+}
+.table td, table th {
+    text-align: center;   
+ }
+/*
 mat-row {
     //border: 1px solid #e7e7e7;
     //font-weight: bold;
     min-height: 30px !important;
     height: 40px;
 }
-
 .cdk-column-monday {
     justify-content: center;
 }
@@ -23,3 +43,4 @@ mat-row {
 .cdk-column-saturday {
     justify-content: center;
 }
+*/
