--- a/Client/src/app/components/schedule/schedule.component.html
+++ b/Client/src/app/components/schedule/schedule.component.html
@@ -1,64 +1,122 @@
 <div fxLayout="column" fxLayoutGap="10px">
+  
+  <table class="table table-bordered mat-elevation-z1">
+    <thead>
+      <tr>
+        <th style="width: 10%">Bloque</th>
+        <th style="width: 12%">Lunes</th>
+        <th style="width: 12%">Martes</th>
+        <th style="width: 12%">Miercoles</th>
+        <th style="width: 12%">Jueves</th>
+        <th style="width: 12%">Viernes</th>
+        <th style="width: 12%">Sábado</th>
+      </tr>
+    </thead>
+    <tbody>
+
+      <tr *ngFor="let item of dataSource; let i = index">
+        <th scope="row">{{item.id}}</th>
+        <td>
+          <button type="button" class="btn btn-sm" [class.btn-success]="checks.monday[item.id - 1]" [class.btn-outline-success]="!checks.monday[item.id - 1]"
+            (click)="checkButton(checks.monday, item.id - 1)"
+            ngDefaultControl>
+            {{checks.monday[item.id - 1] ? 'Seleccionado' : 'Disponible'}}
+          </button>
+        </td>
+        <td>
+          <button type="button" class="btn btn-sm" [class.btn-success]="checks.tuesday[item.id - 1]" [class.btn-outline-success]="!checks.tuesday[item.id - 1]"
+            (click)="checkButton(checks.tuesday, item.id - 1)"
+            ngDefaultControl>
+            {{checks.tuesday[item.id - 1] ? 'Seleccionado' : 'Disponible'}}
+          </button>
+        </td>
+        <td>
+          <button type="button" class="btn btn-sm" [class.btn-success]="checks.wednesday[item.id - 1]" [class.btn-outline-success]="!checks.wednesday[item.id - 1]"
+            (click)="checkButton(checks.wednesday, item.id - 1)"
+            ngDefaultControl>
+            {{checks.wednesday[item.id - 1] ? 'Seleccionado' : 'Disponible'}}
+          </button>
+        </td>
+        <td>
+          <button type="button" class="btn btn-sm"  [class.btn-success]="checks.thursday[item.id - 1]" [class.btn-outline-success]="!checks.thursday[item.id - 1]"
+            (click)="checkButton(checks.thursday, item.id - 1)"
+            ngDefaultControl>
+            {{checks.thursday[item.id - 1] ? 'Seleccionado' : 'Disponible'}}
+          </button>
+        </td>
+        <td>
+          <button type="button" class="btn btn-sm"  [class.btn-success]="checks.friday[item.id - 1]" [class.btn-outline-success]="!checks.friday[item.id - 1]"
+            (click)="checkButton(checks.friday, item.id - 1)"
+            ngDefaultControl>
+            {{checks.friday[item.id - 1] ? 'Seleccionado' : 'Disponible'}}
+          </button>
+        </td>
+        <td>
+          <button type="button" class="btn btn-sm btn-outline-success"  [class.btn-success]="checks.saturday[item.id - 1]" [class.btn-outline-success]="!checks.saturday[item.id - 1]"
+            (click)="checkButton(checks.saturday, item.id - 1)"
+            ngDefaultControl>
+            {{checks.saturday[item.id - 1] ? 'Seleccionado' : 'Disponible'}}
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <!--
   <mat-table fxFlex="row" [dataSource]="dataSource" class="mat-elevation-z1">
 
-    <!-- Block Column -->
     <ng-container matColumnDef="block">
       <mat-header-cell *matHeaderCellDef> Bloque </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.block}} </mat-cell>
     </ng-container>
 
 
-    <!-- Monday Column -->
     <ng-container matColumnDef="monday">
       <mat-header-cell *matHeaderCellDef> Lunes </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <input type="checkbox" [(ngModel)]="checks.monday[element.id - 1]">
+        <label type="checkbox" [(ngModel)]="checks.monday[element.id - 1]">
       </mat-cell>
     </ng-container>
 
-    <!-- Tuesday Column -->
     <ng-container matColumnDef="tuesday">
       <mat-header-cell *matHeaderCellDef> Martes </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <input type="checkbox" [(ngModel)]="checks.tuesday[element.id - 1]">
+        <label type="checkbox" [(ngModel)]="checks.tuesday[element.id - 1]">
       </mat-cell>
     </ng-container>
 
-    <!-- Wednesdady Column -->
     <ng-container matColumnDef="wednesday">
       <mat-header-cell *matHeaderCellDef> Miércoles </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <input type="checkbox" [(ngModel)]="checks.wednesday[element.id - 1]">
+        <label type="checkbox" [(ngModel)]="checks.wednesday[element.id - 1]">
       </mat-cell>
     </ng-container>
 
-    <!-- Thursday Column -->
     <ng-container matColumnDef="thursday">
       <mat-header-cell *matHeaderCellDef> Jueves </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <input type="checkbox" [(ngModel)]="checks.thursday[element.id - 1]">
+        <label type="checkbox" [(ngModel)]="checks.thursday[element.id - 1]">
       </mat-cell>
     </ng-container>
 
-    <!-- Friday Column -->
     <ng-container matColumnDef="friday">
       <mat-header-cell *matHeaderCellDef> Viernes </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <input  type="checkbox" [(ngModel)]="checks.friday[element.id - 1]">
+        <label  type="checkbox" [(ngModel)]="checks.friday[element.id - 1]">
       </mat-cell>
     </ng-container>
 
-    <!-- Saturday Column -->
     <ng-container matColumnDef="saturday">
       <mat-header-cell *matHeaderCellDef> Sábado </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <input type="checkbox" [(ngModel)]="checks.saturday[element.id - 1]">
+        <label type="checkbox" [(ngModel)]="checks.saturday[element.id - 1]">
       </mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
+
+  -->
   <div fxFlex="row" fxLayoutAlign="end">
     <button mat-raised-button (click)="close()" style="margin-right: 5px">Cancelar</button>
     <button mat-raised-button (click)="checked()" class="btn-success pull-right">Aceptar</button>
