--- a/Client/src/app/modules/resources/subjects/section-schedule/section-schedule.component.html
+++ b/Client/src/app/modules/resources/subjects/section-schedule/section-schedule.component.html
@@ -1,11 +1,19 @@
-<div fxLayout="row" fxLayoutAlign="space-between">
-    <h3 mat-dialog-title>
-        Horario Sección {{section.name}}
-    </h3>
-    <mat-form-field >
-        <input matInput type="number" placeholder="Estudiantes" [(ngModel)]="section.students">
-    </mat-form-field>
+<div class="main-content">
+    <div fxLayout="column" class="container-fluid">
+        <!--flex-direction: column;-->
+        <ng-container *ngIf="section | async as section">
+            <div fxLayout="row">
+                <h3 class="title">
+                    Horario Sección: <b> {{section.name}}</b>
+                </h3>
+            </div>
+            <div fxLayout="row" fxLayoutAlign="end center">
+                <mat-form-field>
+                    <input matInput type="number" placeholder="Estudiantes" [(ngModel)]="section.students">
+                </mat-form-field>
+            </div>
+
+            <app-schedule [checks]="checks" (completed)="completed($event)" (canceled)="close($event)"></app-schedule>
+        </ng-container>
+    </div>
 </div>
-
-
-<app-schedule [checks]="checks" (completed)="completed($event)" (canceled)="close($event)"></app-schedule>
