Add teacher on section create

--- a/Client/src/app/modules/resources/subjects/section-schedule/section-schedule.component.html
+++ b/Client/src/app/modules/resources/subjects/section-schedule/section-schedule.component.html
@@ -1,13 +1,21 @@
 <div class="main-content">
     <div fxLayout="column" class="container-fluid">
         <!--flex-direction: column;-->
-        <ng-container *ngIf="section | async as section">
+        <ng-container *ngIf="section">
             <div fxLayout="row">
                 <h3 class="title">
                     Horario Sección: <b> {{section.name}}</b>
                 </h3>
             </div>
-            <div fxLayout="row" fxLayoutAlign="end center">
+            <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="5px">
+                <mat-form-field>
+                    <mat-label>Profesor de sección</mat-label>
+                    <mat-select [(value)]="teacher">
+                        <mat-option *ngFor="let t of teachers$ | async" [value]="t">
+                            {{t.name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
                 <mat-form-field>
                     <input matInput type="number" placeholder="Estudiantes" [(ngModel)]="section.students">
                 </mat-form-field>
