--- a/Client/src/app/modules/resources/careers/careers-list/careers-list.component.html
+++ b/Client/src/app/modules/resources/careers/careers-list/careers-list.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-12">
         <h3 class="title">
-          Edificios
+          Carreras
         </h3>
       </div>
     </div>
