sections teacher and edit

--- a/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
+++ b/Client/src/app/modules/resources/resources-landing/resources-landing.component.html
@@ -83,7 +83,7 @@
               <i class="material-icons">perm_identity</i>
             </div>
             <p class="card-category">Profesores</p>
-            <h3 class="card-title">45
+            <h3 class="card-title">{{teachersCount | async}}
             </h3>
           </div>
           <div class="card-footer">
