Add sections seeder

--- a/Client/src/app/modules/resources/careers/add-career/add-career.component.html
+++ b/Client/src/app/modules/resources/careers/add-career/add-career.component.html
@@ -3,8 +3,17 @@
   <mat-form-field>
     <input matInput [(ngModel)]="data.element.name" placeholder="Nombre">
   </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Profesor encargado</mat-label>
+    <mat-select [(value)]="data.element.directorId">
+      <mat-option *ngFor="let t of teachers" [value]="t.id">
+        {{t.name}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
 </div>
 <div mat-dialog-actions class="pull-right">
   <button mat-raised-button (click)="close()" style="margin-right: 5px">Cancelar</button>
-  <button mat-raised-button type="submit"  [mat-dialog-close]="data.element" class="btn-success" >Guardar</button>
+  <button mat-raised-button type="submit" [mat-dialog-close]="data.element" class="btn-success">Guardar</button>
 </div>
