--- a/Client/src/assets/scss/core/mixins/_variables.scss
+++ b/Client/src/assets/scss/core/mixins/_variables.scss
@@ -22,4 +22,5 @@ $bottombar-back:       bottombar-back !default;
 
 // Sidebar variables
 $sidebar-width:              calc(100% - 260px) !default;
+$sidebar-login:              100%;
 $sidebar-mini-width:         calc(100% - 80px) !default;
