--- a/Client/src/app/components/sidebar/sidebar.component.html
+++ b/Client/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
-<div class="logo">
+<div class="logo" [hidden]="!logged()">
     <a routerLink="/dashboard" class="simple-text">
         
         Scheduler
     </a>
 </div>
-<div class="sidebar-wrapper">
+<div class="sidebar-wrapper" [hidden]="!logged()">
   <!--<div *ngIf="isMobileMenu()">
     <ul class="nav navbar-nav nav-mobile-menu">
         <li class="nav-item dropdown">
