Add views accordiing to role

--- a/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.scss
+++ b/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.scss
@@ -22,3 +22,9 @@ mat-table {
   //flex-direction: row;
   justify-content: space-between;
 }
+
+.button-completed {
+  min-width: 135px;
+  min-height: 31px;
+  margin-left: 5px;
+}
