--- a/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.html
+++ b/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.html
@@ -1,14 +1,15 @@
 <div class="main-content">
   <div fxLayout="column" fxLayoutAlign="space-between" fxLayoutGap="5px" class="container-fluid">
     <!--flex-direction: column;-->
-    <div fxLayout="row">
+    <div fxLayout="row" fxLayoutAlign="space-between start">
       <h3 class="title">
-        Módulos
+        Módulos de: {{ nameToShow }}
       </h3>
+
     </div>
-    <div fxLayout="row" fxLayoutAlign="space-between start" >
-      <div [hidden]="!isAdmin()">
-        <mat-form-field>
+    <div  fxLayout="row" [hidden]="!isAdmin()">
+      <div fxFlex="start" fxFlex=30%>
+        <mat-form-field  >
           <mat-label>Carrera</mat-label>
           <mat-select [(value)]="idCareer">
             <mat-option (click)="careerChange()" *ngFor="let career of careers" [value]="career.id">
@@ -24,8 +25,17 @@
         </button>
       </div>
     </div>
+    <div *ngIf="career" fxLayout="row" fxLayoutAlign="end center">
+        <p style="margin-bottom: 0px !important">Asignación de horarios:</p>
+        <button class="btn btn-sm button-completed" type="button" (click)="changeCompleted()"
+          [disabled]="!isDirector()"
+          [class.btn-success]="career?.isCompleted" [class.btn-outline-success]="!career?.isCompleted">
+          {{career.isCompleted ? 'Completada' : 'No completada'}}
+        </button>
+    </div>
     <app-sections-table *ngIf="data" [values]="data"></app-sections-table>
   </div>
+  
 
   <ng-template #noSubjects>
     <div>
