--- a/Client/src/app/modules/resources/teachers/teachers-list/teachers-list.component.html
+++ b/Client/src/app/modules/resources/teachers/teachers-list/teachers-list.component.html
@@ -23,10 +23,12 @@
         <ng-container matColumnDef="options">
           <mat-header-cell *matHeaderCellDef> Opciones </mat-header-cell>
           <mat-cell class="options-cell" *matCellDef="let element">
+            <!--
             <button mat-raised-button class="btn-primary" style="margin-right: 5px">
               <mat-icon>create</mat-icon>
             </button>
-            <button mat-raised-button class="btn-danger">
+            -->
+            <button (click)="deleteTeacher(element)" mat-raised-button class="btn-danger">
               <mat-icon>delete</mat-icon>
             </button>
 
