--- a/Client/src/app/components/navbar/navbar.component.html
+++ b/Client/src/app/components/navbar/navbar.component.html
@@ -3,17 +3,17 @@
         <!--<div class="navbar-wrapper">
           <a class="navbar-brand" href="#">{{getTitle()}}</a>
         </div>-->
-      <!--<mdb-breadcrumb>
+        <!--<mdb-breadcrumb>
         <mdb-breadcrumb-item class="blue-text">Home</mdb-breadcrumb-item>
         <mdb-breadcrumb-item class="blue-text">Library</mdb-breadcrumb-item>
         <mdb-breadcrumb-item class="active">Data</mdb-breadcrumb-item>
       </mdb-breadcrumb>-->
         <ol class="breadcrumb">
-          <li *ngFor="let breadcrumb of breadcrumbs">
-            <span [routerLink]="breadcrumb.url" routerLinkActive="router-link-active">
-              {{ breadcrumb.label }}
-            </span>
-          </li>
+            <li *ngFor="let breadcrumb of breadcrumbs">
+                <span [routerLink]="breadcrumb.url" routerLinkActive="router-link-active">
+                    {{ breadcrumb.label }}
+                </span>
+            </li>
         </ol>
         <button mat-raised-button class="navbar-toggler" type="button" (click)="sidebarToggle()">
             <span class="sr-only">Toggle navigation</span>
@@ -23,26 +23,23 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <ul class="navbar-nav">
-                <!--
-                    <li class="nav-item dropdown">
-                    <a class="nav-link" href="#pablo" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+                <li class="nav-item dropdown" *ngIf="isAdmin()">
+                    <a class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                         <i class="material-icons">notifications</i>
-                        <span class="notification">5</span>
+                        <span *ngIf="completedCareers" class="notification">{{completedCareers.length}}</span>
                         <p>
                             <span class="d-lg-none d-md-block">Some Actions</span>
                         </p>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Mike John responded to your email</a>
-                        <a class="dropdown-item" href="#">You have 5 new tasks</a>
-                        <a class="dropdown-item" href="#">You're now friend with Andrew</a>
-                        <a class="dropdown-item" href="#">Another Notification</a>
-                        <a class="dropdown-item" href="#">Another One</a>
+                        <a *ngFor="let career of completedCareers" class="dropdown-item">{{career.name}}</a>
                     </div>
                 </li>
-                -->
                 <li class="nav-item">
-                    <a mat-button class="nav-link dropdown" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a mat-button class="nav-link dropdown" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                         {{userName}}
                         <i class="material-icons">person</i>
                         <!--<p>
