--- a/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.html
+++ b/Client/src/app/modules/resources/subjects/subjects-list/subjects-list.component.html
@@ -25,7 +25,7 @@
         </button>
       </div>
     </div>
-    <div *ngIf="career" fxLayout="row" fxLayoutAlign="end center">
+    <div *ngIf="career && (isDirector() || isAdmin())" fxLayout="row" fxLayoutAlign="end center">
         <p style="margin-bottom: 0px !important">Asignación de horarios:</p>
         <button class="btn btn-sm button-completed" type="button" (click)="changeCompleted()"
           [disabled]="!isDirector()"
