Add button disable classroom

--- a/Client/src/app/modules/resources/buildings/classrooms/classrooms-list/classrooms-list.component.scss
+++ b/Client/src/app/modules/resources/buildings/classrooms/classrooms-list/classrooms-list.component.scss
@@ -18,3 +18,12 @@ mat-table {
   display: flex;
   justify-content: center;
 }
+
+.cdk-column-available {
+  display: flex;
+  justify-content: center;
+}
+
+.button-completed {
+  min-width: 83px !important;
+}
