--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <div class="wrapper">
   <div class="sidebar" data-color="orange" data-background-color="white" data-image="./assets/img/blank.jpg" *ngIf="logged() && isAdmin()" >
     <app-sidebar></app-sidebar>
