--- a/Client/src/app/components/login/login.component.html
+++ b/Client/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
-  <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="30px" style="height: 100%">
+  <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="30px" >
 
-    <div class="mat-elevation-z1 login-card" style="background-color: white">
+    <div class="mat-elevation-z1 login-card" fxFlex.lt-sm="auto" fxFlex.gt-xs="25%">
       <div fxFlexAlign="center" class="simple-text">
         SCHEDULER
       </div>
